--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+     <link rel="stylesheet" href="index.js">
     <script src="index.js"></script>
 </head>
 <body>
@@ -41,9 +42,10 @@
    <div>
        <p>To find out the average production of the sheds click below</p>
        <button onclick="totalProduction(verbose)">find average</button>
+       <button onclick=" incomeOverTime(selling_price, time, verbose)">Find total income</button>
    </div>
    
-   <p id="display" style="font-size:23px;color:green;"></p>
+   
 
     
 </body>
