add the above files

--- a/index.html
+++ b/index.html
@@ -4,45 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dairy Business website</title>
     <link rel="stylesheet" href="index.css">
      <link rel="stylesheet" href="index.js">
     <script src="index.js"></script>
 </head>
 <body>
+    <!--Informatio about my sheds-->
     <h1>Dairy Business</h1>
    <div>
-    <h2>SHED A</h2>
-    <label>number of cows</label>
-    <input type="number"  value="34">
-    <label>average production in liters</label>
-    <input type="number"  value="15">
-   </div>
-   <div>
-    <h2>SHED B</h2>
-    <label>number of cows</label>
-    <input type="number"  value="11">
-    <label>average production in liters</label>
-    <input type="number"  value="28">
-   </div>
-   <div>
-    <h2>SHED C</h2>
-    <label>number of cows</label>
-    <input type="number"  value="27">
-    <label>average production in liters</label>
-    <input type="number"  value="18">
-   </div>
-   <div>
-    <h2>SHED D</h2>
-    <label>number of cows</label>
-    <input type="number"  value="52">
-    <label>average production in liters</label>
-    <input type="number"  value="11">
-   </div>
-   <div>
-       <p>To find out the average production of the sheds click below</p>
-       <button onclick="totalProduction(verbose)">find average</button>
-       <button onclick=" incomeOverTime(selling_price, time, verbose)">Find total income</button>
+       <div class="sheds">
+     <div>
+        <h2>SHED A</h2>
+        <label>number of cows</label>
+        <input type="number"  value="34">
+        <label>average production in liters</label>
+        <input type="number"  value="15">
+     </div>
+     <div>
+       <h2>SHED B</h2>
+      <label>number of cows</label>
+      <input type="number"  value="11">
+      <label>average production in liters</label>
+      <input type="number"  value="28">
+     </div>
+      <div>
+        <h2>SHED C</h2>
+        <label>number of cows</label>
+       <input type="number"  value="27">
+       <label>average production in liters</label>
+       <input type="number"  value="18">
+     </div>
+     <div>
+      <h2>SHED D</h2>
+      <label>number of cows</label>
+      <input type="number"  value="52">
+      <label>average production in liters</label>
+      <input type="number"  value="11">
+      </div>
+     </div>
+
+
+
+     <div>
+       <div id=interactive>
+          <p>To find out the average production and the total income of the sheds click below</p>
+          <p>press ok to view the production per sheds</p>
+          <p>cotinue pressing ok on the alert pop-up to see the income</p>
+          <button onclick="totalProduction(verbose)" id="button">find average milk production &#8594</button>
+      </div>
    </div>
    
    
